--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apexcharts": "^3.19.3",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "moment": "^2.27.0",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-router": "^3.2.0",
