--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "moment": "^2.27.0",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
+    "vue-lottie": "^0.2.1",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
