--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-lottie": "^0.2.1",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
+    "vue2-editor": "^2.10.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
