--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^3.2.0",
     "vue2-editor": "^2.10.2",
     "vuetify": "^2.2.11",
+    "vuewordcloud": "^18.7.12",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
